--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,15 +3,67 @@
 <head>
     <title>Base Index</title>
     <meta charset = "UTF-8">
+    <style>
+        table {
+            border-collapse: collapse;
+            border: 1px solid black;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
-    <h1>the first tilte</h1>
-    <p>the first paragraph</p>
-    <h2>the second title</h2>
-    <p>the seconf paragraph</p>
-    <h3>the last title</h3>
-    <p>the laste paragraph</p>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo">
-<p><a>herf=tweets.html</a>to see the tweet</p>
+    <header>
+        <h1>website title</h1>
+    </header>
+    <main>
+        <article> 
+            <h2>the first title</h2>
+            <p>the first paragraph</p>
+            <h3>the second title</h3>
+            <p>the second paragraph</p>
+            <a href="tweets.html">Go to Tweets</a>
+            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo">
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>country</th>
+                </tr>
+                <tr>
+                    <td>Jhon</td>
+                    <td>25</td>
+                    <td>USA</td>
+                </tr>
+                <tr>
+                    <td>Emily</td>
+                    <td>28</td>
+                    <td>Canada</td>        
+                </tr>
+                <tr>
+                    <td>Michael</td>
+                    <td>32</td>
+                    <td>Australia</td>
+                </tr>
+                <tr>
+                    <td>Sophia</td>
+                    <td>21</td>
+                    <td>UK</td>
+                </tr>
+            </table>
+        </article>
+        <aside> 
+           <p>the last paragraph</p>
+        </aside>
+    </main>
+    <footer>
+        Made by <strong>SALMA</strong>- <a href="https://intranet.alxswe.com/projects/100581#quiz-completed" target="_blank">here</a>.
+    </footer>
 </body>
 </html>
