--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,20 +5,33 @@
     <meta charset = "UTF-8">
 </head>
 <body>
-    
-    <h1>the first tilte</h1>
-    <p>the first paragraph</p>
-    <h2>the second title</h2>
-    <p>the seconf paragraph</p>
-    <h3>the last title</h3>
-    <p>the laste paragraph</p>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo">
-    <h4>embedding a tweet</h4>
-    <blockquote class="twitter-tweet" data-theme="dark">
-        <p lang="en" dir="ltr">putting “reddit” at the end of every question i have on google cuz i will never trust an AI i need John from 13 years ago that has the same problem as me to solve it</p>
-        &mdash; ˚ʚ 🐈‍⬛ ɞ˚ (@Cyb4rAnGeL) 
-        <a href="https://twitter.com/Cyb4rAnGeL/status/1832058911144530022?ref_src=twsrc%5Etfw">September 6, 2024</a>
-    </blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<p><a>herf=index.html</a>back to home page</p>
+    <header>
+        <h1>website title</h1>
+    </header>
+
+    <main>
+        <article>
+            <h2>the first title</h2>
+            <p>the first paragraph.</p>
+            <h3>the second title</h3>
+            <p>the second paragraph.</p>
+            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo">
+             <h4>embedding a tweet</h4>
+            <blockquote class="twitter-tweet" data-theme="dark">
+              <p lang="en" dir="ltr">putting “reddit” at the end of every question i have on google cuz i will never trust an AI i need John from 13 years ago that has the same problem as me to solve it</p>
+               &mdash; ˚ʚ 🐈‍⬛ ɞ˚ (@Cyb4rAnGeL) 
+               <a href="https://twitter.com/Cyb4rAnGeL/status/1832058911144530022?ref_src=twsrc%5Etfw">September 6, 2024</a>
+            </blockquote> 
+            <script async src="https://platform.twitter.com/widgets.js"></script>
+         <a href="index.html">Go to Index</a>
+        </article>
+
+    <aside>
+        <p>the last paragraph</p>
+    </aside>
+</main>
+    <footer>
+        Made by <strong>SALMA</strong>- <a href="https://intranet.alxswe.com/projects/100581#quiz-completed" target="_blank">here</a>.
+    </footer>
 </body>
 </html>
