--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -26,6 +26,9 @@
         <article> 
             <h2>the first title</h2>
             <p>the first paragraph</p>
+            <p>paragrapg</p>
+            <p>paragraph2</p>
+            
             <h3>the second title</h3>
             <p>the second paragraph</p>
             <a href="tweets.html">Go to Tweets</a>
