--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,72 +1,53 @@
 <!DOCTYPE html>
-<html lang = "en">
-<head>
-    <title>Base Index</title>
-    <meta charset = "UTF-8">
-    <style>
-        table {
-            border-collapse: collapse;
-            border: 1px solid black;
-        }
-        th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Basic Structure</title>
+  </head>
+  <body>
     <header>
-        <h1>website title</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Go to homepage</a></li>
+                <li><a href="tweets.html">Go to tweets</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <article> 
-            <h2>the first title</h2>
-            <p>the first paragraph</p>
-            <p>paragrapg</p>
-            <p>paragraph2</p>
-            
-            <h3>the second title</h3>
-            <p>the second paragraph</p>
-            <a href="tweets.html">Go to Tweets</a>
-            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo">
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <th>Age</th>
-                    <th>country</th>
-                </tr>
-                <tr>
-                    <td>Jhon</td>
-                    <td>25</td>
-                    <td>USA</td>
-                </tr>
-                <tr>
-                    <td>Emily</td>
-                    <td>28</td>
-                    <td>Canada</td>        
-                </tr>
-                <tr>
-                    <td>Michael</td>
-                    <td>32</td>
-                    <td>Australia</td>
-                </tr>
-                <tr>
-                    <td>Sophia</td>
-                    <td>21</td>
-                    <td>UK</td>
-                </tr>
-            </table>
-        </article>
-        <aside> 
-           <p>the last paragraph</p>
-        </aside>
-    </main>
-    <footer>
-        Made by <strong>SALMA</strong>- <a href="https://intranet.alxswe.com/projects/100581#quiz-completed" target="_blank">here</a>.
-    </footer>
-</body>
-</html>
+        <article>
+            <h1>ALX</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras bibendum a
+      augue at elementum. Donec at lacus odio. Sed ultrices velit sem, vel
+      iaculis est euismod eu. Aliquam ultricies lacus a magna mattis
+      consectetur. Ut aliquet est at justo vestibulum fermentum. Suspendisse nec
+      convallis quam. Donec rutrum neque ut sodales ultrices. Vivamus at urna
+      molestie, sollicitudin metus et, malesuada quam.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras bibendum a
+      augue at elementum. Donec at lacus odio. Sed ultrices velit sem, vel
+      iaculis est euismod eu. Aliquam ultricies lacus a magna mattis
+      consectetur. Ut aliquet est at justo vestibulum fermentum. Suspendisse nec
+      convallis quam. Donec rutrum neque ut sodales ultrices. Vivamus at urna
+      molestie, sollicitudin metus et, malesuada quam.
+    </p>
+    <h2>ALX</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras bibendum a
+      augue at elementum. Donec at lacus odio. Sed ultrices velit sem, vel
+      iaculis est euismod eu. Aliquam ultricies lacus a magna mattis
+      consectetur. Ut aliquet est at justo vestibulum fermentum. Suspendisse nec
+      convallis quam. Donec rutrum neque ut sodales ultrices. Vivamus at urna
+      molestie, sollicitudin metus et, malesuada quam.
+    </p>
+    <h3>ALX</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras bibendum a
+      augue at elementum. Donec at lacus odio. Sed ultrices velit sem, vel
+      iaculis est euismod eu. Aliquam ultricies lacus a magna mattis
+      consectetur. Ut aliquet est at justo vestibulum fermentum. Suspendisse nec
+      convallis quam. Donec rutrum neque ut sodales ultrices. Vivamus at urna
+      molestie, sollicitudin metus et, malesuada quam.
+    </p>
