--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Basic Structure</title>
-  </head>
-  <body>
+<html lang ="en">
+<head>
+    <title>Base Index</title>
+    <meta charset = "UTF-8">
+</head>
+<body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Go to homepage</a></li>
-                <li><a href="tweets.html">Go to tweets</a></li>
-            </ul>
-        </nav>
+        <h1>website title</h1>
     </header>
+
     <main>
         <article>
-            <blockquote class="twitter-tweet">
-                <p lang="en" dir="ltr">This is my first post ✨☀️</p>
-                &mdash; Oussama JAMIL (@iamoussamajamil)
-                <a
-                  href="https://twitter.com/iamoussamajamil/status/1835372796429410539?ref_src=twsrc%5Etfw"
-                  >September 15, 2024</a
-                >
-              </blockquote>
-              <script
-                async
-                src="https://platform.twitter.com/widgets.js"
-                charset="utf-8"
-              ></script>
-              <a href="index.html">Go to homepage</a>
+            <h2>the first title</h2>
+            <p>the first paragraph.</p>
+            <h3>the second title</h3>
+            <p>the second paragraph.</p>
+            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo">
+             <h4>embedding a tweet</h4>
+            <blockquote class="twitter-tweet" data-theme="dark">
+              <p lang="en" dir="ltr">putting “reddit” at the end of every question i have on google cuz i will never trust an AI i need John from 13 years ago that has the same problem as me to solve it</p>
+               &mdash; ˚ʚ 🐈‍⬛ ɞ˚ (@Cyb4rAnGeL) 
+               <a href="https://twitter.com/Cyb4rAnGeL/status/1832058911144530022?ref_src=twsrc%5Etfw">September 6, 2024</a>
+            </blockquote> 
+            <script async src="https://platform.twitter.com/widgets.js"></script>
+         <a href="index.html">Go to Index</a>
         </article>
-        <aside>placeholder to add comment thread later</aside>
 
-    </main>
+    <aside>
+        <p>the last paragraph</p>
+    </aside>
+</main>
     <footer>
-        <p>Made by Oussama - <a href="https://x.com/iamoussamajamil" target="_blank">Twitter</a></p>
+        Made by <strong>SALMA</strong>- <a href="https://intranet.alxswe.com/projects/100581#quiz-completed" target="_blank">here</a>.
     </footer>
-
-    
-  </body>
+</body>
 </html>
