--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,6 @@
+
 <!DOCTYPE html>
-<html lang=""en"> 
+<html lang="en"> 
 <head>
 <meta charset="utf-8">
 <title> salma ouezzani chahdi - personal portfolio</title>
@@ -14,10 +15,10 @@
 
     <nav>
         <ul>
-            <li><a herf="introduction">introduction</a></li>
-            <li><a herf="projects">projects</a></li>
-            <li><a herf="about me">about me</a></li>
-            <li><a herf="contact">contact</a></li>
+            <li><a href="introduction">introduction</a></li>
+            <li><a href="projects">projects</a></li>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="contact">contact</a></li>
         </ul>
     </nav>
 
@@ -28,13 +29,14 @@
 
     <section id="projects">
         <h2>projects</h2>
-        <article class="project"></article>
+        <article class="project">
             <h3>Project One</h3>
             <p>This is a brief description of the first project. It highlights the main objectives and outcomes of the project.</p>
             <a href="tweets.html" target="_blank">View Project</a>
+        </article>
     </section>
 
-    <section id="about">
+    <section id="about-me">
         <h2>About Me</h2>
         <p>
             As an English Literature graduate with a passion for fashion design and front-end development, 
@@ -47,15 +49,55 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <a herf="mailto:salma.chahdi.ouezzani@gmai.com">
-        <a herf="https://www.linkedin.com/in/salma-ouezzani-chahdi-463002300?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"></a>
-        <a herf="https://github.com/saaaalmaaaaa"target="_blank"></a>
+        <p>Feel free to get in touch with me through the following links:</p>
+        <ul>
+            <li><a href="mailto:salma.chahdi.ouezzani@gmail.com">Email Me</a></li>
+            <li><a href="https://www.linkedin.com/in/salma-ouezzani-chahdi-463002300?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/saaaalmaaaaa" target="_blank">GitHub</a></li>
+        </ul>
     </section>
     <footer>
         <p>&copy; 2024 salma. All rights reserved.</p>
     </footer>
 </body>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</html>
 
 
 
